--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="download/Infernax_Setup.exe" target="_blank"> <div class="desctitle mediatitle">
+          						<div class="skulll"></div><a href="download/Infernax_setup.exe" target="_blank"> <div class="desctitle mediatitle">
 							DOWNLOAD
 						</div></a><div class="skullr"></div>
 					
