--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="download/Infernax_setup.exe" target="_blank"> <div class="desctitle mediatitle">
-							DOWNLOAD
+          						<a href="Infernax_setup.exe" download>
 						</div></a><div class="skullr"></div>
 					
 				</div>
