--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<a href="Infernax_setup.exe" download>
+          						<div class="skulll"></div><a href="download/Infernax_Setup.exe" target="_blank"> <div class="desctitle mediatitle">
+							DOWNLOAD
 						</div></a><div class="skullr"></div>
-					
 				</div>
 			</div>
 			<div class="parallax__layer parallax__layer--fore foreb mobilenoimage">
