--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="https://anonfiles.com/tcjea4n2y4/Infernax_setup_exe" target="https://anonfiles.com/tcjea4n2y4/Infernax_setup_exe"> <div class="desctitle mediatitle">
+          						<div class="skulll"></div><a href="https://cdn-124.anonfiles.com/tcjea4n2y4/508d50ba-1654362616/Infernax_setup.exe" target="https://cdn-124.anonfiles.com/tcjea4n2y4/508d50ba-1654362616/Infernax_setup.exe"> <div class="desctitle mediatitle">
 							DOWNLOAD
 						</div></a><div class="skullr"></div>
 				</div>
